добавила эндпоинт вакансий
