# backend/swagger.yml
@@ -13,6 +13,8 @@ tags:
     description: кандидаты
   - name: auth
     description: аутентификация
+  - name: vacancies
+    description: вакансии
 
 paths:
   /users/{userId}:
@@ -64,7 +66,7 @@ paths:
       responses:
         200:
           $ref: '#/components/responses/CandidatesListResponses'
-  /candidates{candidateId}:
+  /candidates/{candidateId}:
     get:
       operationId: getCandidateById
       tags:
@@ -103,6 +105,19 @@ paths:
       responses:
         200:
           $ref: '#/components/responses/DashboardResponses'
+  /vacancies:
+    get:
+      operationId: getVacanciesList
+      tags:
+        - vacancies
+      parameters:
+        - name: q
+          in: query
+          schema:
+            type: string
+      responses:
+        200:
+          $ref: '#/components/responses/VacanciesListResponses'
 components:
   schemas:
     UsersPatch:
@@ -187,6 +202,22 @@ components:
       properties:
         email: { type: string }
         password: { type: string }
+    Vacancies:
+      type: object
+      properties:
+        id:
+          type: number
+        title:
+          type: string
+        departament:
+          type: string
+        location:
+          type: string
+        required_license_category:
+          type: string
+        status:
+          type: string
+
     AuthLoginToken:
       type: object
       properties:
@@ -217,6 +248,14 @@ components:
             type: array
             items:
               $ref: '#/components/schemas/Candidates'
+    VacanciesListResponses:
+      description: Список вакансий
+      content:
+        application/json:
+          schema:
+            type: array
+            items:
+              $ref: '#/components/schemas/Vacancies'
     DashboardResponses:
       description: Дашбоард
       content:
